# Ariadne

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  bibtex.py  db.py  db_sync.py  mcp.json.example  models.py  pyproject.toml  server.py
apis/: arxiv_client.py  github.py  math_ocr.py  openalex.py  semantic_scholar.py
tests/: test_integration.py
tools/: __init__.py  _constants.py  _embeddings.py  _llm_client.py  _text_processing.py  _vectorstore.py  analysis.py  classification.py  concepts.py  discovery.py  export.py  formatting.py  latex.py  library.py  monitoring.py  network.py  reading.py  screening.py  setup.py  synthesis.py  writing.py
