[project]
name = "ariadne"
version = "0.3.0"
description = "Local MCP-powered academic literature review system — search, annotate, map citations, export BibTeX"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["literature-review", "mcp", "claude", "academic", "research", "semantic-scholar", "bibtex", "openalex", "arxiv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "bibtexparser>=2.0.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
pdf = [
    "pdfplumber>=0.10.0",
]
llm = [
    "anthropic>=0.39.0",
]
embeddings = [
    "sentence-transformers>=3.0.0",
]
vectorstore = [
    "chromadb>=0.5.0",
]
math = [
    "nougat-ocr>=0.1.0",
    "torch>=2.0.0",
]
dashboard = [
    "streamlit>=1.30.0",
    "networkx>=3.0",
    "pyvis>=0.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
all = [
    "ariadne[pdf,llm,embeddings,vectorstore,dashboard]",
]

[project.scripts]
ariadne = "server:main"

[project.urls]
Repository = "https://github.com/yourusername/ariadne"
Issues = "https://github.com/yourusername/ariadne/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = ["papers.db", "pdfs/", "__pycache__/", "*.pyc"]
